--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,6 +1,6 @@
 /* stylelint-disable */
-@import "codemirror/lib/codemirror";
-@import "codemirror/theme/hopscotch";
+@import "~codemirror/lib/codemirror";
+@import "~codemirror/theme/hopscotch";
 
 @import "spectrum.scss";
 @import "gjs_variables.scss";
